--- a/style.css
+++ b/style.css
@@ -26,6 +26,16 @@ main {
     margin: 80px 0 0 0;
 }
 
+.profile-picture {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 300px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
 .hero {
     background-color: #f5f5f5;
     padding: 20px;
