--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 300px;
+    width: 144px;
+    height: 144px;
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -82,6 +82,18 @@ footer {
         font-weight: bold;
     }
 }
+
+.pulse-shadow {
+    /* Add a shadow to the element */
+    box-shadow: 0px 0px 0px #000;
+    transition: box-shadow 0.5s ease;
+}
+  
+.pulse-shadow:hover {
+    /* Increase the size and blur of the shadow when the element is hovered */
+    box-shadow: 0px 0px 20px #000;
+}
+  
 
 /* themem mngmnt */
 @media (prefers-color-scheme: dark) {
