--- a/style.css
+++ b/style.css
@@ -46,8 +46,8 @@ main {
 /* Make the profile picture a circle */
 .profile-picture {
     border-radius: 50%;
-    width: 50vw;
-    max-width:250px;
+    /* width: 50vw; */
+    max-width:50px;
     height:auto;
 }  
 
