--- a/style.css
+++ b/style.css
@@ -93,6 +93,92 @@ main {
     margin-bottom: 100px;
 }
 
+
+
+
+/* Swiper container styling */
+.swiper {
+    right: 1rem;
+    height: 50vh;
+    width: 100%;
+}
+
+
+.swiper-slide {
+    text-align: center;
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+.slide_1 {
+    background-color:#643ca3 ;
+}
+
+
+.slide_2 {
+    background-color:#e38364 ;
+}
+
+
+.slide_3 {
+    background-color:#faf47a ;
+}
+
+
+.slide_4 {
+    background-color:#64e3c1 ;
+}
+
+
+.slide_5 {
+    background-color:#9e6ffd ;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+    outline: none;
+}
+
+.swiper {
+    width: 70%;
+    --swiper-navigation-color: #000000;
+    --swiper-pagination-color: #000000;
+}
+
+.swiper-slide img {
+    width: auto;
+    height: auto;
+    max-width: 85%;
+    max-height: 100%;
+    -ms-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    position: absolute;
+    left: 50%;
+    top: 50%;
+}
+
+
+
 .dotstyle{
     text-align: center;
 }
